# pointcaster

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  README.org  resources.conf  vcpkg.json
pointreceiver/: .gitignore  CMakeLists.txt  build_all.ps1  build_android.ps1  build_linux  build_static.ps1  build_win.ps1
pointreceiver/include/: pointreceiver.h
pointreceiver/src/: pointreceiver.cc  pointreceiver.h
pointreceiver/touch/: .gitignore  PointReceiverTOP.cpp  PointReceiverTOP.sln  test.toe
pointreceiver/touchdesigner/: CMakeLists.txt
pointreceiver/touchdesigner/include/: CHOP_CPlusPlusBase.h  POP_CPlusPlusBase.h
pointreceiver/touchdesigner/src/: PointreceiverCloudInPOP.cpp  PointreceiverCloudInPOP.h  PointreceiverMessageInCHOP.cpp  PointreceiverMessageInCHOP.h  PointreceiverPOP.cpp  PointreceiverPOP.h  PointreceiverPlugin.cpp  PointreceiverPlugin.h
pointreceiver/unity/: Simple Point Cloud.vfx  package.json
pointreceiver/unity/Materials/: DefaultMat.mat
pointreceiver/unity/Resources/: Cube.prefab  PointTransfer.compute
pointreceiver/unity/Scenes/: PointCloudReceiver.unity
pointreceiver/unity/Scripts/: PointCloudBinder.cs  PointReceiver.cs  Util.cs
pointreceiver/unity/Shaders/: Point.shader  PointCloud.shader
pointreceiver/unity/Vfx/: PointCloud.vfx  Simple Point Cloud.vfx
pointreceiver/unreal/: .clang-format  PointreceiverPlugin.uplugin
pointreceiver/unreal/Content/: L_PointreceiverTest.umap  LiveLinkAABBController.uasset
pointreceiver/~touch/: CrashAutoSave.test.toe  PointReceiverTOP.cpp  PointReceiverTOP.h  PointReceiverTOP.vcxproj
src/: CMakeLists.txt  aabb.h  app_settings.cc  app_settings.h  camera_controller.cc  camera_controller.h  config_variant.h  driver.h  flat_shade_object.h  frame_counter.h  gui_helpers.cc  gui_helpers.h  identifiable.h  k4a_driver.cc  k4a_driver.h  log.h  logger.h  main_thread_dispatcher.h  math.h  modes.h  mqtt_client.cc  mqtt_client.h  network_globals.h  parameters.cc  parameters.h  particle_group.cc  particle_group.h  path.cc  path.h  pch.h  point_cloud.cc  point_cloud.h  point_cloud_renderer.cc  point_cloud_renderer.h  point_cloud_renderer_config.h  pointcaster.cc  pointcaster.h  pointer.h  profiling.cc  profiling.h  (+22 more)
src/analysis/: analyser_2d.cc  analyser_2d.h  analyser_2d_config.h  contour_smoothing.cc  contour_smoothing.h
src/app_settings/: CMakeLists.txt  app_settings.cc  app_settings.h
src/camera/: camera_config.h  camera_controller.cc  camera_controller.h
src/client_sync/: \  sync_server.cc  sync_server.h  sync_server_config.h  updates.h
src/config/: config_variant.h  transform_config.h
src/core/: CMakeLists.txt  point_cloud.cc
src/core/codec/: draco.cc
src/core/logger/: logger.cc  logger.h
src/core/profiling/: profiling_mutex.h
src/core/uuid/: uuid.cc  uuid.h
src/devices/: device.cc  device.h  device_config.h  device_variants.h  driver.h  transform_filters.cuh  usb.cc  usb.h  usb_config.h
src/devices/k4a/: #k4a_device.cc#  #k4a_driver_thrust_attempt.cu#  k4a_config.h  k4a_device.cc  k4a_device.h  k4a_driver.cc  k4a_driver.cu  k4a_driver.h  k4a_driver_backup.cu  k4a_driver_thrust_attempt.cu  k4a_utils.h
src/devices/k4w2/: k4w2_device.cc  k4w2_device.h  k4w2_driver.h  (+1 more)
src/filters/: chroma_key.cuh
src/fonts/: IconsFontAwesome6.h
src/graph/: graph_types.h  operator_graph.cc  operator_graph.h
src/gui/: catpuccin.h  drag_slider.cc  drag_slider.h  layout.h  main_viewport.cc  main_viewport.h  overlay_text.h  range_slider.cc  range_slider.h  right_click_menu.h  widgets.cc  widgets.h  windows.cc  windows.h
src/kernels/: compiler.cc  compiler.cu  compiler.h
src/logger/: logger.h
src/metrics/: CMakeLists.txt  metrics.h  prometheus_server.cc  prometheus_server.h
src/midi/: midi_client.cc  midi_client.h  midi_client_config.h  midi_device.cc  midi_device.h  midi_device_config.h  rtp_peer.cc  rtp_peer.h  rtpmidi_device.cc  rtpmidi_device.h  rtpmidi_device_config.h
src/mqtt/: mqtt_client.cc  mqtt_client.h  mqtt_client_config.h
src/objects/: solid_box.h  solid_objects.h  wireframe_objects.cc  wireframe_objects.h
src/operators/: knn_filter_operator.cc  knn_filter_operator.cuh  knn_filter_operator.h  minmax_extremes.cuh  noise_operator.cc  noise_operator.cuh  noise_operator.h  operator.h  operator_friendly_names.h  operator_host_config.h  operator_traits.h  operator_types.h  operator_utils.cuh  operators.h  outlier_scratch.cu  rake_operator.cc  rake_operator.cuh  rake_operator.h  range_filter_operator.cc  range_filter_operator.cuh  range_filter_operator.h  rotate_operator.cc  rotate_operator.cuh  rotate_operator.h  sample_filter_operator.cc  sample_filter_operator.cuh  sample_filter_operator.h  session_bounding_boxes.h  session_operator_host.cc  session_operator_host.cu  session_operator_host.h  shape_filter_operator.h
src/osc/: osc_client.cc  osc_client.h  osc_client_config.h  osc_server.cc  osc_server.h  osc_server_config.h
src/playback/: ply.cc  ply.h
src/plugins/: CMakeLists.txt  plugin_loader.cc  plugin_loader.h
src/point_cloud_renderer/: point_cloud_renderer.cc  point_cloud_renderer.h  point_cloud_renderer_config.h
src/publisher/: publishable_traits.h  publisher.cc  publisher.h  publisher_utils.cc  publisher_utils.h
src/radio/: radio.cc  radio.h  radio_config.h
src/session/: config_variant.h  session_config.h
src/shaders/: particle_sphere.cc  particle_sphere.frag  particle_sphere.h  particle_sphere.vert  texture_display.cc  texture_display.frag  texture_display.h  texture_display.vert
src/templates/: config_adapter_impl.h.j2  device_adapter_impl.h.j2
src/transformers/: global_transformer.cc  global_transformer.cu  global_transformer.h  noise_transformer.cc  noise_transformer.cuh  noise_transformer.h  transformer_types.h  transformers.h
src/tween/: tween_config.h  tween_manager.cc  tween_manager.h
src/ui/: CMakeLists.txt  initialisation.cc  initialisation.h
src/utils/: lru_cache.h
src/workspace/: workspace.cc  workspace.h  workspace_config.cc  workspace_config.h
src/wtf/: wtf.cc  wtf.h
(+248 files in other folders)
